Resolved x overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -339,13 +339,10 @@ navbar
   width: 16.66666667%;
 }
 .row {
-  --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   display: flex;
   flex-wrap: wrap;
   margin-top: calc(-1 * var(--bs-gutter-y));
-  margin-right: calc(-.5 * var(--bs-gutter-x));
-  margin-left: calc(-.5 * var(--bs-gutter-x));
 }
 .students-flexcolumn{
   min-width: 200px;
